# rustatic

./: .gitignore  .pre-commit-config.yaml  CNAME  Cargo.toml  README.md
.github/workflows/: audit.yml  rust.yml  website.yml
_layouts/: default.html  template.html
src/: main.rs
website/: Cargo.toml  template.html
website/src/: main.rs
