[package]
name = "rustatic"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Web server for static site used primarily locally during development"
keywords = ["cli", "web", "static"]
categories = ["web-programming::http-server"]
readme = "README.md"
repository = "https://github.com/szabgab/rustatic/"
homepage = "https://rustatic.code-maven.com/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1"
tiny_http = "0.12"
clap = { version = "4.3", features = ["derive"] }
