[package]
name = "rustatic"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Web server for static site used primarily locally during development"
keywords = ["cli", "web", "static"]
categories = ["web-programming::http-server"]
readme = "README.md"
repository = "https://github.com/szabgab/rustatic/"
homepage = "https://rustatic.code-maven.com/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1"
tiny_http = "0.12"
clap = { version = "4.3", features = ["derive"] }


[lints.clippy]
cargo        = { priority = -1, level = "deny" }
complexity   = { priority = -1, level = "deny" }
correctness  = { priority = -1, level = "deny" }
nursery      = { priority = -1, level = "deny" }
pedantic     = { priority = -1, level = "deny" }
perf         = { priority = -1, level = "deny" }
restriction  = { priority = -1, level = "deny" }
style        = { priority = -1, level = "deny" }
suspicious   = { priority = -1, level = "deny" }

absolute_paths = "allow"   # I actually like absoulte pathes when using code
print_stdout = "allow"     # Wee need to print stuff to the console



arithmetic_side_effects = "allow"
blanket_clippy_restriction_lints = "allow"
branches_sharing_code = "allow"
dbg_macro = "allow"
default_numeric_fallback = "allow"
expect_used = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
manual_string_new = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
option_if_let_else = "allow"
shadow_reuse = "allow"
single_call_fn = "allow"
std_instead_of_core = "allow"
string_slice = "allow"
str_to_string = "allow"
too_many_lines = "allow"
unwrap_used = "allow"
