[package]
name = "rustatic"
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Web server for static site used primarily locally during development"
keywords = ["cli", "web", "static"]
categories = ["web-programming::http-server"]
readme = "README.md"
repository = "https://github.com/szabgab/rustatic/"
homepage = "https://rustatic.code-maven.com/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1"
tiny_http = "0.12"
clap = { version = "4.3", features = ["derive"] }
mime_guess = "2.0.4"

[lints.clippy]
cargo        = { priority = -1, level = "deny" }
complexity   = { priority = -1, level = "deny" }
correctness  = { priority = -1, level = "deny" }
nursery      = { priority = -1, level = "deny" }
pedantic     = { priority = -1, level = "deny" }
perf         = { priority = -1, level = "deny" }
restriction  = { priority = -1, level = "deny" }
style        = { priority = -1, level = "deny" }
suspicious   = { priority = -1, level = "deny" }

absolute_paths = "allow"                   # I actually like absoulte pathes when using code.
blanket_clippy_restriction_lints = "allow" # It is intentional for extreme clippy.
implicit_return = "allow"                  # This is the rust-way, isn't it?
print_stdout = "allow"                     # Wee need to print stuff to the console.
single_call_fn = "allow"                   # We want shorter functions even if we only use them in one place.


arithmetic_side_effects = "allow"
branches_sharing_code = "allow"
default_numeric_fallback = "allow"
indexing_slicing = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
option_if_let_else = "allow"
std_instead_of_core = "allow"
string_slice = "allow"
unwrap_used = "allow"
